Function is not working for some reason.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Whatsapp replica</title>
     <link rel="stylesheet" href="style.css">
+    <link href="css/all.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
@@ -14,43 +15,108 @@
       <main>
         <div id="left">
           <div class="head">
-
+            <img src="img/face.jpg" alt="">
           </div>
           <div id="notifica">
           </div>
           <div id="searchbar">
+            <div id="inputbar">
+            <input type="text" placeholder="Crea o inizia una nuova chat">
+            </div>
           </div>
           <div id="friendlist">
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
-            <div class="friend"></div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
           </div>
         </div>
 
         <div id="right">
           <div class="head">
-
+            <img src="img/face.jpg" alt="">
           </div>
           <div id="center">
-
+            <div id="theyMsg">Ciao, come stai?</div>
           </div>
           <div class="foot">
-
+            <input id="sendText" type="text" placeholder="Scrivi un messaggio">
+            <div id="sendMsg"><i class="fas fa-paper-plane fa-lg"></i></div>
           </div>
 
         </div>
       </main>
+      <div id="template">
+        <div class="message">
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
