Trying to get holder class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,32 @@
             </div>
             <div class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Gabriele</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Giuseppe</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Martina</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Mariano</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Paolo</h2>
+              <span>Non poteva essere altrimenti</span>
+            </div>
+            <div class="friend">
+              <img src="img/face.jpg" alt="">
+              <h2>Simone</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
             <div class="friend">
@@ -67,32 +92,7 @@
             </div>
             <div class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
-              <span>Non poteva essere altrimenti</span>
-            </div>
-            <div class="friend">
-              <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
-              <span>Non poteva essere altrimenti</span>
-            </div>
-            <div class="friend">
-              <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
-              <span>Non poteva essere altrimenti</span>
-            </div>
-            <div class="friend">
-              <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
-              <span>Non poteva essere altrimenti</span>
-            </div>
-            <div class="friend">
-              <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
-              <span>Non poteva essere altrimenti</span>
-            </div>
-            <div class="friend">
-              <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Carletto</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
           </div>
@@ -103,7 +103,9 @@
             <img src="img/face.jpg" alt="">
           </div>
           <div id="center">
-            <div id="theyMsg">Ciao, come stai?</div>
+            <div class="holder">
+              <div class="theyMsg">Ciao, come stai?</div>
+            </div>
           </div>
           <div class="foot">
             <input id="sendText" type="text" placeholder="Scrivi un messaggio">
@@ -117,6 +119,12 @@
 
         </div>
       </div>
+      <div id="template2">
+        <div class="holder">
+
+        </div>
+      </div>
+      <script src="action.js"></script>
     </div>
   </body>
 </html>
