Project finished and working.

--- a/index.html
+++ b/index.html
@@ -21,76 +21,76 @@
           </div>
           <div id="searchbar">
             <div id="inputbar">
-            <input type="text" placeholder="Crea o inizia una nuova chat">
+            <input type="text" id="seachFriends" placeholder="Cerca">
             </div>
           </div>
           <div id="friendlist">
-            <div class="friend">
+            <div refchat="chat1" class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Teresa</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat2" class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Marcel</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat3" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Gabriele</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat4" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Giuseppe</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat5" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Martina</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat6" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Mariano</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat7" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Paolo</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat8" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Simone</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat9" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Marco</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat10" class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Filippo</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat11" class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Matteo</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat12" class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Arek</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat13" class="friend">
               <img src="img/face.jpg" alt="">
-              <h2>Marco</h2>
+              <h2>Agnese</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div class="friend">
+            <div refchat="chat14" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Carletto</h2>
               <span>Non poteva essere altrimenti</span>
@@ -103,9 +103,49 @@
             <img src="img/face.jpg" alt="">
           </div>
           <div id="center">
-            <div class="holder">
-              <div class="theyMsg">Ciao, come stai?</div>
+            <div refchat="chat1" class="chat active">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
             </div>
+            <div refchat="chat2" class="chat">
+              <div class="theyMsg">Ciao, come stai bello?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat3" class="chat">
+              <div class="theyMsg">Ou come butta fra?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat4" class="chat">
+              <div class="theyMsg">Non mi disturbare, per favore<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat5" class="chat">
+              <div class="theyMsg">Ehhh, che vuoi?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat6" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat7" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat8" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat9" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat10" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat11" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat12" class="chat">
+              <div class="theyMsg">Gramy w Diablo???<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat13" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+            <div refchat="chat14" class="chat">
+              <div class="theyMsg">Ciao, come stai?<div class="eliminato"><span class="del">Elimina il messaggio</span></div></div>
+            </div>
+
           </div>
           <div class="foot">
             <input id="sendText" type="text" placeholder="Scrivi un messaggio">
@@ -118,6 +158,10 @@
         <div class="message">
 
         </div>
+
+      </div>
+      <div class="eliminato">
+        <span class="del">Elimina il messaggio</span>
       </div>
       <div id="template2">
         <div class="holder">
