Finished and working perfectly.

--- a/index.html
+++ b/index.html
@@ -25,72 +25,72 @@
             </div>
           </div>
           <div id="friendlist">
-            <div refchat="chat1" class="friend">
+            <div refchat="chat1" refhead="refhead1" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Teresa</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat2" class="friend">
+            <div refchat="chat2" refhead="refhead2" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Marcel</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat3" class="friend">
+            <div refchat="chat3" refhead="refhead3" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Gabriele</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat4" class="friend">
+            <div refchat="chat4" refhead="refhead4" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Giuseppe</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat5" class="friend">
+            <div refchat="chat5" refhead="refhead5" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Martina</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat6" class="friend">
+            <div refchat="chat6" refhead="refhead6" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Mariano</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat7" class="friend">
+            <div refchat="chat7" refhead="refhead7" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Paolo</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat8" class="friend">
+            <div refchat="chat8" refhead="refhead8" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Simone</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat9" class="friend">
+            <div refchat="chat9" refhead="refhead9" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Marco</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat10" class="friend">
+            <div refchat="chat10" refhead="refhead10" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Filippo</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat11" class="friend">
+            <div refchat="chat11" refhead="refhead11" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Matteo</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat12" class="friend">
+            <div refchat="chat12" refhead="refhead12" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Arek</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat13" class="friend">
+            <div refchat="chat13" refhead="refhead13" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Agnese</h2>
               <span>Non poteva essere altrimenti</span>
             </div>
-            <div refchat="chat14" class="friend">
+            <div refchat="chat14" refhead="refhead14" class="friend">
               <img src="img/face.jpg" alt="">
               <h2>Carletto</h2>
               <span>Non poteva essere altrimenti</span>
@@ -100,7 +100,62 @@
 
         <div id="right">
           <div class="head">
-            <img src="img/face.jpg" alt="">
+            <div  refhead="refhead1" class="headpeople active">
+              <img src="img/face.jpg" alt="">
+              <h2>Teresa</h2>
+            </div>
+            <div refhead="refhead2" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Marcel</h2>
+            </div>
+            <div refhead="refhead3" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Gabriele</h2>
+            </div>
+            <div refhead="refhead4" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Giuseppe</h2>
+            </div>
+            <div refhead="refhead5" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Martina</h2>
+            </div>
+            <div refhead="refhead6" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Mariano</h2>
+            </div>
+            <div refhead="refhead7" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Paolo</h2>
+            </div>
+            <div refhead="refhead8" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Simone</h2>
+            </div>
+            <div refhead="refhead9" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Marco</h2>
+            </div>
+            <div refhead="refhead10" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Filippo</h2>
+            </div>
+            <div refhead="refhead11" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Matteo</h2>
+            </div>
+            <div refhead="refhead12" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Arek</h2>
+            </div>
+            <div refhead="refhead13" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Agnese</h2>
+            </div>
+            <div refhead="refhead14" class="headpeople">
+              <img src="img/face.jpg" alt="">
+              <h2>Carletto</h2>
+            </div>
           </div>
           <div id="center">
             <div refchat="chat1" class="chat active">
